# fop-calculator

./: README.md  pyproject.toml
fop_calculator_console/: fop_3_group_console.py  fop_calculator.py
