[tool.poetry]
name = "fop-calculator"
version = "0.1.0"
description = ""
authors = ["ViktorMarkovych <viktormarkovuch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
